--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
-<% provide :title, 'Home' %>
+<% provide :title, "Home" %>
 
 <h1>Welcome to Flix!</h1>
 
 <% # the following line is the equivalent of <a href="#">About</a> %>
-<%= link_to 'About', '#' %>
-<%= link_to 'Contact', '#' %>
+<%= link_to "About", about_path %>
+<%= link_to "Contact", contact_path %>
