--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<% provide :title, 'About' %>
+<% provide :title, "About" %>
 
 <h1>Pages#about</h1>
 <p>Find me in app/views/pages/about.html.erb</p>
