--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,4 @@
-<% provide :title, 'Contact' %>
+<% provide :title, "Contact" %>
 
 <h1>Pages#contact</h1>
 <p>Find me in app/views/pages/contact.html.erb</p>
