--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,3 +5,4 @@
 <% # the following line is the equivalent of <a href="#">About</a> %>
 <%= link_to "About", about_path %>
 <%= link_to "Contact", contact_path %>
+<%= link_to "Faq", faq_path %>
