add some contents, styles, and bootstrap

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,5 @@
+<% #Provide the page title in a symbol to application.html.erb to avoid duplication %>
 <% provide :title, "Contact" %>
 
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<h1>Contact</h1>
+<p>Luigi De Russis (<a href="mailto:luigi.derussis@polito.it?subject=Flix">luigi.derussis@polito.it</a>)</p>
