--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,5 @@
+<% #Provide the page title in a symbol to application.html.erb to avoid duplication %>
 <% provide :title, "About" %>
 
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About</h1>
+<p>Flix is a prototype social network for people who love movies.</p>
