--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,9 @@
 
   <!-- Footer -->
   <%= render "layouts/footer" %>
+
+  <% # show debug info if development is the active Rails env %>
+  <%= debug(params) if Rails.env.development? %>
 </div>
 
 </body>
