--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,8 +5,8 @@
   <h1>Welcome to Flix</h1>
 
   <h2>
-    Sign up or login to start using <%= link_to "Flix", '#'%>.
+    Sign up or login to start using <%= link_to "Flix", root_path %>.
   </h2>
 
-  <%= link_to "Sign up now!", '#', class:"btn btn-primary btn-lg", role:"button"%>
+  <%= link_to "Sign up now!", signup_path, class:"btn btn-primary btn-lg", role:"button"%>
 </div>
