--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<% #Provide the page title in a symbol to application.html.erb to avoid duplication %>
+<% provide :title, 'Sign Up' %>
+
+<h1>Sign Up</h1>
+<p>Add here some contents for registering a new user...</p>
