--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
   <aside class="col-md-4">
     <section>
       <h1>
-        <% #= gravatar_for @user %>
+        <%= gravatar_for @user %>
         <%= @user.name %>
       </h1>
     </section>
