--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,10 +14,23 @@
     <!-- Collect the nav links for toggling -->
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <% #link_to is the Rails helper to create links (it generates <a...> tags) %>
+        <% #link_to is the Rails helper to create links (it generates <a.../> tags) %>
         <li><%=link_to "Home", root_path %></li>
         <li><%=link_to "Faq", faq_path %></li>
-        <li><%=link_to "Sign in", "#" %></li>
+        <% if signed_in? %>
+            <li><%= link_to "Users", '#' %></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" id="accountMenu" data-toggle="dropdown">Account <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu" aria-labelledby="accountMenu">
+                <li><%= link_to "Profile", current_user %></li>
+                <li><%= link_to "Settings", '#' %></li>
+                <li class="divider"></li>
+                <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
+              </ul>
+            </li>
+        <% else %>
+            <li><%=link_to "Sign in", signin_path %></li>
+        <% end %>
       </ul>
     </div> <!--/.nav-collapse -->
   </div> <!-- /.container-fluid -->
