--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
         <li><%=link_to "Home", root_path %></li>
         <li><%=link_to "Faq", faq_path %></li>
         <% if signed_in? %>
-            <li><%= link_to "Users", '#' %></li>
+            <li><%= link_to "Users", users_path %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" id="accountMenu" data-toggle="dropdown">Account <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu" aria-labelledby="accountMenu">
