--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,6 +3,8 @@
 
 <h1>All users</h1>
 
+<%= will_paginate %>
+
 <ul class="users">
   <% @users.each do |user| %>
       <li>
@@ -11,3 +13,5 @@
       </li>
   <% end %>
 </ul>
+
+<%= will_paginate %>
