--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,11 +1,11 @@
 <% # handle and show forms errors %>
-<% if @user.errors.any? %>
+<% if object.errors.any? %>
     <div id="error_explanation">
       <div class="alert alert-error">
-        The form contains <%= pluralize(@user.errors.count, "error") %>.
+        The form contains <%= pluralize(object.errors.count, "error") %>.
       </div>
       <ul>
-        <% @user.errors.full_messages.each do |message| %>
+        <% object.errors.full_messages.each do |message| %>
             <li>* <%= message %></li>
         <% end %>
       </ul>
