--- a/app/views/shared/_post_form.html.erb
+++ b/app/views/shared/_post_form.html.erb
@@ -2,6 +2,7 @@
     <%= render 'shared/error_messages', object: f.object %>
     <div class="row">
       <div class="field col-md-9">
+        <%= f.text_field :title, placeholder: 'Summary' %>
         <%= f.text_area :content, placeholder: 'What are you doing?' %>
         <%= f.submit 'Post', class: 'btn btn-primary btn-home' %>
       </div>
