--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,6 +12,7 @@
     <section>
       <%= render 'shared/stats' %>
     </section>
+    <%= render 'follow_form' if signed_in? %>
   </aside>
 
   <div class="col-md-8">
