--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,16 +6,7 @@
 <%= will_paginate %>
 
 <ul class="users">
-  <% @users.each do |user| %>
-      <li>
-        <%= gravatar_for user, size: 52 %>
-        <%= link_to user.name, user %>
-        <% if current_user.admin? && !current_user?(user) %>
-            <% # since browsers cannot send DELETE request, Rails fakes them with javascript... %>
-            | <%= link_to 'delete', user, method: :delete, data: { confirm: 'Are you sure?' } %>
-        <% end %>
-      </li>
-  <% end %>
+  <%= render @users %>
 </ul>
 
 <%= will_paginate %>
