--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,6 +13,8 @@
       </aside>
       <div class="col-md-9">
         <%= render 'shared/post_form' %>
+        <h3>Wall</h3>
+        <%= render 'shared/feed' %>
       </div>
     </div>
 <% else %>
